--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ProgmobileTP3"
         tools:targetApi="31">
         <activity
+            android:name=".AffichagePlanningActivity"
+            android:exported="false" />
+        <activity
             android:name=".PlanningActivity"
             android:exported="false" />
         <activity
